tests/build/widget_new/missing_semi_in_when2.stderr
error: expected property value
  --> $DIR/missing_semi_in_when2.rs:10:20
   |
10 |             margin =
   |                    ^
